--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100 data-bs-interval=800" src="/img/1.gif" alt="First slide">
+          <img class="d-block w-100 data-bs-interval=800" src="./img/1.gif" alt="First slide">
           <div class="carousel-caption d-none d-md-block">
             <h1>The best water quality in the world</h1>
             <h3>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
@@ -95,7 +95,7 @@
           </div>
         </div>
         <div class="carousel-item data-bs-interval=800">
-          <img class="d-block w-100" src="/img/2.gif" alt="Second slide">
+          <img class="d-block w-100" src="./img/2.gif" alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
             <h1>In a short time you will have your order</h1>
             <h3>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
@@ -107,7 +107,7 @@
 
         </div>
         <div class="carousel-item data-bs-interval=800">
-          <img class="d-block w-100" src="/img/3.gif" alt="Third slide">
+          <img class="d-block w-100" src="./img/3.gif" alt="Third slide">
           <div class="carousel-caption d-none d-md-block">
             <h1>We deliver to all parts of the world</h1>
             <h3>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
@@ -125,6 +125,7 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
+ 
 
     <section>
 
