--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </div>
         </div>
         <div class="carousel-item data-bs-interval=800">
-          <img class="d-block w-100" src="./img/2.gif" alt="Second slide">
+          <img class="d-block w-100" src="https://i.pinimg.com/originals/1d/15/d8/1d15d8da8b3b6f3a895828ba2663f409.gif" alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
             <h1>In a short time you will have your order</h1>
             <h3>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
